--- a/include/themes/sunrise/main.css
+++ b/include/themes/sunrise/main.css
@@ -1154,6 +1154,10 @@ legend {
 	display: inline-block;
 }
 
+.piinstall, .pienable, .pidisable, .piuninstall, .pierror {
+	padding: 0px 3px !important;
+}
+
 .linkEditMain, .linkEditMain:visited, .linkEditMain:active {
 	color: #93CEFF;
 	text-decoration: none;
